--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "chokidar": "^4.0.3",
     "express": "^5.1.0",
     "multer": "^2.0.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "webrtc": "^1.14.1",
+    "wrtc": "^0.4.7"
   }
 }
